[package]
name = "google-lens-ocr"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "A simple command line tool to run Google Lens OCR on an image"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Rapptz/google-lens-ocr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
arboard = "3.3.2"
image = "0.25.1"
json5 = "0.4.1"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_json5 = "0.1.0"
ureq = "2.9.6"
